# log4cplus.rs

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
log-log4cplus/: Cargo.toml
log-log4cplus/examples/: hello_world.rs  yak_shaver.rs
log-log4cplus/src/: lib.rs
log4cplus/: Cargo.toml  build.rs  conanfile.txt
log4cplus/examples/: hello_macros.rs  hello_world.rs
log4cplus/src/: basic_configurator.rs  initializer.rs  lib.rs  log_level.rs  logger.rs  macros.rs  shim.hpp  tstring.rs
log4plus-sys/: Cargo.toml
tracing-log4cplus/: Cargo.toml
tracing-log4cplus/examples/: yak_shaver.rs
